Added reservation handle
