# core-booking/src/main/kotlin/controller/ToDto.kt
@@ -3,9 +3,10 @@ package org.example.controller
 import org.example.model.Reservation
 import ru.openbook.model.BookReservationStatus
 import ru.openbook.model.ReservationRequestFailure
+import ru.openbook.model.ReservationRequestProcessing
 import ru.openbook.model.ReservationRequestSuccess
 
-internal fun Reservation.toDto() =
+internal fun Reservation.toReservationRequestDto() =
     when (this.status) {
         Reservation.ReservationStatus.SUCCESS -> ReservationRequestSuccess(
             status = BookReservationStatus.SUCCESS,
@@ -17,5 +18,12 @@ internal fun Reservation.toDto() =
         Reservation.ReservationStatus.FAILED -> ReservationRequestFailure(
             status = BookReservationStatus.FAILED,
             reason = this.reason.toString()
+        )
+
+        else -> ReservationRequestProcessing(
+            status = BookReservationStatus.IN_PROGRESS,
+            reservationId = this.id,
+            bookId = this.bookId,
+            userId = this.userId,
         )
     }
