# core-booking/src/main/resources/api/api.yaml
@@ -25,7 +25,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BookReservationResponse'
+                $ref: '#/components/schemas/BookReservationRequestResponse'
         401:
           $ref: '#/components/responses/401'
         404:
@@ -74,6 +74,7 @@ components:
       name: X-Idempotency-Token
       schema:
         type: string
+        format: uuid
       required: true
 
   responses:
@@ -93,43 +94,9 @@ components:
             $ref: '#/components/schemas/Error'
 
   schemas:
-    BookReservationResponse:
-      type: object
-      discriminator:
-        propertyName: status
-        mapping:
-          SUCCESS: '#/components/schemas/BookReservationSuccess'
-          FAILED: '#/components/schemas/BookReservationFailure'
-      properties:
-        status:
-          $ref: '#/components/schemas/BookReservationStatus'
-      required:
-        - status
-
-    BookReservationSuccess:
-      allOf:
-        - $ref: '#/components/schemas/BookReservationResponse'
-        - type: object
-          required:
-            - reservationId
-          properties:
-            reservationId:
-              type: string
-              format: uuid
-
-    BookReservationFailure:
-      allOf:
-        - $ref: '#/components/schemas/BookReservationResponse'
-        - type: object
-          required:
-            - reasonCode
-          properties:
-            reasonCode:
-              type: string
-
     BookReservationStatus:
       type: string
-      enum: [ SUCCESS, FAILED ]
+      enum: [ SUCCESS, FAILED, IN_PROGRESS ]
 
     BookReservationRequestResponse:
       type: object
@@ -138,6 +105,7 @@ components:
         mapping:
           SUCCESS: '#/components/schemas/ReservationRequestSuccess'
           FAILED: '#/components/schemas/ReservationRequestFailure'
+          IN_PROGRESS: '#/components/schemas/ReservationRequestProcessing'
       properties:
         status:
           $ref: '#/components/schemas/BookReservationStatus'
@@ -172,6 +140,25 @@ components:
           properties:
             reason:
               type: string
+
+    ReservationRequestProcessing:
+      allOf:
+        - $ref: '#/components/schemas/BookReservationRequestResponse'
+        - type: object
+          required:
+            - reservationId
+            - bookId
+            - userId
+          properties:
+            reservationId:
+              type: string
+              format: uuid
+            bookId:
+              type: string
+              format: uuid
+            userId:
+              type: string
+              format: uuid
 
     Error:
       type: object
